--- a/.github/workflows/build-arm64.yml
+++ b/.github/workflows/build-arm64.yml
@@ -6,38 +6,35 @@ on:
 jobs:
   build-arm64:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        arch: [arm64]
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
+    - name: Set up ARM64 Runner
+      uses: docker/setup-qemu-action@v3
+
     - name: Install Rust Toolchain
       uses: dtolnay/rust-toolchain@stable
-      with:
-        targets: aarch64-unknown-linux-gnu
 
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y gcc-aarch64-linux-gnu pkg-config libssl-dev
+        sudo apt-get install -y build-essential pkg-config libssl-dev openssl
 
     - name: Clone tunet-rust Repository
       run: |
         git clone https://github.com/Berrysoft/tunet-rust.git
 
-    - name: Setup Cargo Config for Cross Compile
-      run: |
-        mkdir -p ~/.cargo
-        echo '[target.aarch64-unknown-linux-gnu]' > ~/.cargo/config.toml
-        echo 'linker = "aarch64-linux-gnu-gcc"' >> ~/.cargo/config.toml
-
     - name: Build Project for ARM64
       working-directory: tunet-rust
       run: |
-        cargo build --release --workspace --exclude native --target aarch64-unknown-linux-gnu
+        cargo build --release --workspace --exclude native
 
     - name: Upload Binary Artifact
       uses: actions/upload-artifact@v4
       with:
         name: tunet-arm64
-        path: tunet-rust/target/aarch64-unknown-linux-gnu/release/
+        path: tunet-rust/target/release/
