--- a/.github/workflows/build-multi-platforms.yml
+++ b/.github/workflows/build-multi-platforms.yml
@@ -67,6 +67,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Rust Toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -95,10 +97,17 @@ jobs:
         run: |
           cargo build --release --workspace --exclude native
 
+      - name: Configure Git User
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
       - name: Create Git Tag
         run: |
           git tag ${{ inputs.tag }}
           git push origin ${{ inputs.tag }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release and Upload Artifact
         uses: softprops/action-gh-release@v2
