--- a/.github/workflows/build-multi-platforms.yml
+++ b/.github/workflows/build-multi-platforms.yml
@@ -101,13 +101,12 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
 
       - name: Create Git Tag
         run: |
           git tag ${{ inputs.tag }}
           git push origin ${{ inputs.tag }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release and Upload Artifact
         uses: softprops/action-gh-release@v2
